fix: decrease article heading margins for h3 and smaller
Margins above H3s in articles were too large, per feedback.

--- a/blocks/article-header/article-header.css
+++ b/blocks/article-header/article-header.css
@@ -20,6 +20,13 @@
     max-width: var(--page-constrained-text);
     margin-inline: auto;
 
+    & :is(h3, h4, h5, h6):not(.author-meta__name) {
+      --spacing-heading-block-start-small-screen: 1.75rem;
+      --spacing-heading-block-start-medium-screen: 1.75rem;
+      --spacing-heading-block-start-large-screen: 1.75rem;
+      --spacing-heading-block-start-xl-screen: 2.0rem;
+    }
+
     & :is(h1, h2, h3, h4, h5, h6):not(.author-meta__name) {
       margin-block-start: var(--spacing-heading-block-start-small-screen);
 
@@ -41,7 +48,7 @@
       font-weight: var(--spectrum-title-weight-xl);
 
       @media (min-width: 80rem) {
-        font-size: var(--spectrum-title-size-xxxl);
+        font-size: var(--spectrum-title-size-xxl);
       }
     }
 
